@@ -62,6 +62,9 @@ subtitle.ssa text/x-ssa
 text-iso8859-15.txt text/plain ox
 text-utf8.txt text/plain ox
 
+# xml subtypes
+test.ttx application/x-font-ttx
+
 # other
 text.pdf application/pdf
 project.glade application/x-glade
