@@ -1,3 +1,10 @@
+2008-01-31  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in:
+	* tests/list:
+	* tests/test.ttx: Patch from Christian Persch
+	<chpe@gnome.org> to add the TTX font mime-type (Closes: #14318)
+
 2008-01-29  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Patch from Paolo Borelli
